[package]
name = "clash-rs-config"
version = "0.1.2"
edition = "2021"
categories = ["data-structures", "config"]
keywords = ["clash", "yaml"]
license = "Apache-2.0"
readme = "README.md"
description = "a clash yaml config parser"
homepage = "https://github.com/e1732a364fed/clash-rs-config"
repository = "https://github.com/e1732a364fed/clash-rs-config"

[dependencies]
educe = "0.6.0"
serde = { version = "1", features = ["derive"] }
# serde_yaml_ng = "0.10"
serde_yml = "0.0.12"
thiserror = "2"
